--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,37 +9,39 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
       - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           file: ./Dockerfile.docker
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: msyea/ubuntu-docker
-          tag_with_ref: true
+          tags: msyea/ubuntu-docker
+          push: true
   push_dind:
+    needs: push_docker
     name: Push Ubuntu DinD image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
       - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           file: ./Dockerfile.dind
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: msyea/ubuntu-dind
-          tag_with_ref: true
+          tags: msyea/ubuntu-dind
+          push: true
   push_gha:
+    needs: [push_docker, push_dind]
     name: Push GitHub Actions runner image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
       - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: msyea/github-actions-runner
-          tag_with_ref: true
+          tags: msyea/github-actions-runner
+          push: true
