--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: [msyea]
-custom: ["https://paypal.me/msyeaoss", "PayPal"]
+custom: ["https://paypal.me/msyeaoss"]
