--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -55,6 +55,7 @@ jobs:
           registry: docker.pkg.github.com
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - run: docker pull docker.pkg.github.com/msyea/github-actions-runner/ubuntu-dind:latest
       - name: Push to GitHub
         uses: docker/build-push-action@v2
         with:
