--- a/.github/workflows/docker-registry-publish.yml
+++ b/.github/workflows/docker-registry-publish.yml
@@ -1,8 +1,7 @@
 name: Publish Docker image
 on:
   push:
-    branches:
-      - main
+
 jobs:
   push_docker:
     name: Push Ubuntu Docker image to Docker Hub
@@ -10,6 +9,7 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      - run: echo "GIT_SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -19,7 +19,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           file: ./Dockerfile.docker
-          tags: msyea/ubuntu-docker
+          tags: msyea/ubuntu-docker:$GIT_SHORT_SHA
           push: true
   push_dind:
     needs: push_docker
@@ -28,6 +28,7 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      - run: echo "GIT_SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -37,8 +38,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           file: ./Dockerfile.dind
-          tags: msyea/ubuntu-dind
+          tags: msyea/ubuntu-dind:$GIT_SHORT_SHA
           push: true
+          build-args: TAG=$GIT_SHORT_SHA
   push_gha:
     needs: [push_docker, push_dind]
     name: Push GitHub Actions runner image to Docker Hub
@@ -46,6 +48,7 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      - run: echo "GIT_SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -54,5 +57,6 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          tags: msyea/github-actions-runner
+          tags: msyea/github-actions-runner:$GIT_SHORT_SHA
           push: true
+          build-args: TAG=$GIT_SHORT_SHA
