--- a/.github/workflows/docker-registry-publish.yml
+++ b/.github/workflows/docker-registry-publish.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           file: ./Dockerfile.docker
-          tags: msyea/ubuntu-docker:$GIT_SHORT_SHA
+          tags: msyea/ubuntu-docker:${GIT_SHORT_SHA}
           push: true
   push_dind:
     needs: push_docker
@@ -38,9 +38,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           file: ./Dockerfile.dind
-          tags: msyea/ubuntu-dind:$GIT_SHORT_SHA
+          tags: msyea/ubuntu-dind:${GIT_SHORT_SHA}
           push: true
-          build-args: TAG=$GIT_SHORT_SHA
+          build-args: TAG=${GIT_SHORT_SHA}
   push_gha:
     needs: [push_docker, push_dind]
     name: Push GitHub Actions runner image to Docker Hub
@@ -57,6 +57,6 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          tags: msyea/github-actions-runner:$GIT_SHORT_SHA
+          tags: msyea/github-actions-runner:${GIT_SHORT_SHA}
           push: true
-          build-args: TAG=$GIT_SHORT_SHA
+          build-args: TAG=${GIT_SHORT_SHA}
