--- a/.github/workflows/docker-registry-publish.yml
+++ b/.github/workflows/docker-registry-publish.yml
@@ -9,7 +9,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - run: echo "GIT_SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      - name: Set $GIT_SHORT_SHA
+        run: echo "GIT_SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -28,7 +29,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - run: echo "GIT_SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      - name: Set $GIT_SHORT_SHA
+        run: echo "GIT_SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -48,7 +50,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - run: echo "GIT_SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      - name: Set $GIT_SHORT_SHA
+        run: echo "GIT_SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
